# tg-bot-llm

./: .gitignore  README.md  env.example  main.py  manage.sh  pyproject.toml  requirements-mcp.txt  requirements.txt  run.sh
config/: __init__.py  buttons.py  group_admin_help.py  group_image_moderation.py  nvidia_models.py  performance.py  settings.py  text.py
docs/: ADMIN_README.md  BOT_COMMANDS.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_ANALYSIS.md
handlers/: __init__.py  admin.py  callbacks.py  commands.py  messages.py  states.py
mcp_server/: mcp.json.example  server.py
middleware/: __init__.py  throttling.py
models/: __init__.py  database.py  llm_models.yaml  model.yaml  openrouter_free_models.yaml  user.py
scripts/: sync_openrouter_free_models.py  test_admin_commands.py
services/: __init__.py  chat_history.py  chat_tools.py  gemini.py  group_admin.py  group_context.py  http_session.py  moderation_actions.py  moderation_tools.py  nvidia.py  openrouter.py  openrouter_catalog.py  telegram_admin_perms.py  telegram_moderation.py  voice.py
services/application/: __init__.py  dto.py  message_use_cases.py  response_presenter.py  trigger_policy.py
services/group_admin/: __init__.py  enforcement.py  guest_bot_bindings.py  image_moderation.py  keywords.py  manager.py  policy.py  repo.py
services/llm/: __init__.py  conversation.py  invoker.py  messages.py  registry.py  types.py
services/ports/: __init__.py  (+3 more)
utils/: __init__.py  bot_cache.py  cache.py  db_pool.py  helpers.py  markdown.py  moderation_actor.py  reply_context.py  stream_reply.py  telegram_text.py
(+13 files in other folders)
